# game-of-life

./: .gitignore  CMakeLists.txt  README.md  TODO.md  main.c
